--- a/X7Pro_Driver.ioc
+++ b/X7Pro_Driver.ioc
@@ -35,7 +35,9 @@ CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_TE
 CORTEX_M7.default_mode_Activation=1
 Dma.Request0=SPI1_RX
 Dma.Request1=SPI1_TX
-Dma.RequestsNb=2
+Dma.Request2=SPI4_RX
+Dma.Request3=SPI4_TX
+Dma.RequestsNb=4
 Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.0.EventEnable=DISABLE
 Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -72,6 +74,42 @@ Dma.SPI1_TX.1.SyncEnable=DISABLE
 Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_TX.1.SyncRequestNumber=1
 Dma.SPI1_TX.1.SyncSignalID=NONE
+Dma.SPI4_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI4_RX.2.EventEnable=DISABLE
+Dma.SPI4_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI4_RX.2.Instance=DMA1_Stream3
+Dma.SPI4_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI4_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI4_RX.2.Mode=DMA_NORMAL
+Dma.SPI4_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI4_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI4_RX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI4_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI4_RX.2.RequestNumber=1
+Dma.SPI4_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI4_RX.2.SignalID=NONE
+Dma.SPI4_RX.2.SyncEnable=DISABLE
+Dma.SPI4_RX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI4_RX.2.SyncRequestNumber=1
+Dma.SPI4_RX.2.SyncSignalID=NONE
+Dma.SPI4_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI4_TX.3.EventEnable=DISABLE
+Dma.SPI4_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI4_TX.3.Instance=DMA1_Stream2
+Dma.SPI4_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI4_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI4_TX.3.Mode=DMA_NORMAL
+Dma.SPI4_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI4_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI4_TX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI4_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI4_TX.3.RequestNumber=1
+Dma.SPI4_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI4_TX.3.SignalID=NONE
+Dma.SPI4_TX.3.SyncEnable=DISABLE
+Dma.SPI4_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI4_TX.3.SyncRequestNumber=1
+Dma.SPI4_TX.3.SyncSignalID=NONE
 FATFS.BSP.number=1
 FATFS.IPParameters=_CODE_PAGE,_USE_LFN,_MAX_SS
 FATFS._CODE_PAGE=936
@@ -90,7 +128,7 @@ FATFS0.BSP.solution=PB2
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,FootprintOK,INCLUDE_vTaskDelayUntil
-FREERTOS.Tasks01=defaultTask,0,1024,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,0,1024,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -98,8 +136,9 @@ Mcu.CPN=STM32H743XIH6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP10=SYS
-Mcu.IP11=UART7
+Mcu.IP10=SPI4
+Mcu.IP11=SYS
+Mcu.IP12=UART7
 Mcu.IP2=DMA
 Mcu.IP3=FATFS
 Mcu.IP4=FREERTOS
@@ -108,37 +147,41 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SDMMC1
 Mcu.IP9=SPI1
-Mcu.IPNb=12
+Mcu.IPNb=13
 Mcu.Name=STM32H743XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PC10
-Mcu.Pin1=PG11
-Mcu.Pin10=PE3
-Mcu.Pin11=PD2
-Mcu.Pin12=PC8
-Mcu.Pin13=PC9
-Mcu.Pin14=PG7
-Mcu.Pin15=PF2
-Mcu.Pin16=PH1-OSC_OUT (PH1)
-Mcu.Pin17=PH0-OSC_IN (PH0)
-Mcu.Pin18=PF6
-Mcu.Pin19=PF10
-Mcu.Pin2=PC11
-Mcu.Pin20=PA6
-Mcu.Pin21=PB2
-Mcu.Pin22=PE8
-Mcu.Pin23=PE7
-Mcu.Pin24=VP_FATFS_VS_SDIO
-Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin26=VP_SYS_VS_tim1
-Mcu.Pin3=PA14 (JTCK/SWCLK)
-Mcu.Pin4=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin5=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin6=PD7
-Mcu.Pin7=PC12
-Mcu.Pin8=PA13 (JTMS/SWDIO)
-Mcu.Pin9=PE5
-Mcu.PinsNb=27
+Mcu.Pin1=PA15 (JTDI)
+Mcu.Pin10=PA13 (JTMS/SWDIO)
+Mcu.Pin11=PE5
+Mcu.Pin12=PE3
+Mcu.Pin13=PD2
+Mcu.Pin14=PE6
+Mcu.Pin15=PC8
+Mcu.Pin16=PC9
+Mcu.Pin17=PG7
+Mcu.Pin18=PF2
+Mcu.Pin19=PH1-OSC_OUT (PH1)
+Mcu.Pin2=PG11
+Mcu.Pin20=PH0-OSC_IN (PH0)
+Mcu.Pin21=PF6
+Mcu.Pin22=PF10
+Mcu.Pin23=PA6
+Mcu.Pin24=PB2
+Mcu.Pin25=PE8
+Mcu.Pin26=PE13
+Mcu.Pin27=PE7
+Mcu.Pin28=VP_FATFS_VS_SDIO
+Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin3=PC11
+Mcu.Pin30=VP_SYS_VS_tim1
+Mcu.Pin4=PA14 (JTCK/SWCLK)
+Mcu.Pin5=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin6=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin7=PE2
+Mcu.Pin8=PD7
+Mcu.Pin9=PC12
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743XIHx
@@ -174,6 +217,8 @@ MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI9_5_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -185,6 +230,7 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SDMMC1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SPI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.SPI4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -199,6 +245,10 @@ PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PA15\ (JTDI).GPIOParameters=GPIO_Label
+PA15\ (JTDI).GPIO_Label=ICM42688P_CS
+PA15\ (JTDI).Locked=true
+PA15\ (JTDI).Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Speed
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Locked=true
@@ -239,8 +289,14 @@ PD7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD7.Locked=true
 PD7.Mode=Full_Duplex_Master
 PD7.Signal=SPI1_MOSI
+PE13.Locked=true
+PE13.Mode=Full_Duplex_Master
+PE13.Signal=SPI4_MISO
+PE2.Locked=true
+PE2.Mode=Full_Duplex_Master
+PE2.Signal=SPI4_SCK
 PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=SENSORS_ON
+PE3.GPIO_Label=SENSORS_SW
 PE3.Locked=true
 PE3.Signal=GPIO_Output
 PE5.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultOutputPP
@@ -248,6 +304,9 @@ PE5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PE5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PE5.Locked=true
 PE5.Signal=GPIO_Output
+PE6.Locked=true
+PE6.Mode=Full_Duplex_Master
+PE6.Signal=SPI4_MOSI
 PE7.GPIOParameters=GPIO_ModeDefaultEXTI
 PE7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PE7.Locked=true
@@ -320,7 +379,7 @@ ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-true-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,4-MX_DMA_Init-DMA-true-LL-true,5-MX_UART7_Init-UART7-true-HAL-true,6-MX_MDMA_Init-MDMA-true-HAL-true,7-MX_FATFS_Init-FATFS-true-HAL-false,8-MX_SPI1_Init-SPI1-true-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-true-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,4-MX_DMA_Init-DMA-true-LL-true,5-MX_UART7_Init-UART7-true-HAL-true,6-MX_MDMA_Init-MDMA-true-HAL-true,7-MX_FATFS_Init-FATFS-true-HAL-false,8-MX_SPI1_Init-SPI1-true-LL-true,9-MX_SPI4_Init-SPI4-true-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=200000000
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
@@ -338,7 +397,7 @@ RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=200000000
+RCC.DFSDMACLkFreq_Value=100000000
 RCC.DFSDMFreq_Value=100000000
 RCC.DIVM1=4
 RCC.DIVM2=4
@@ -350,15 +409,15 @@ RCC.DIVP1Freq_Value=400000000
 RCC.DIVP2Freq_Value=200000000
 RCC.DIVP3=4
 RCC.DIVP3Freq_Value=40000000
-RCC.DIVQ1=4
-RCC.DIVQ1Freq_Value=200000000
+RCC.DIVQ1=8
+RCC.DIVQ1Freq_Value=100000000
 RCC.DIVQ2Freq_Value=200000000
 RCC.DIVQ3Freq_Value=80000000
 RCC.DIVR1=4
 RCC.DIVR1Freq_Value=200000000
 RCC.DIVR2Freq_Value=200000000
 RCC.DIVR3Freq_Value=80000000
-RCC.FDCANFreq_Value=200000000
+RCC.FDCANFreq_Value=100000000
 RCC.FMCFreq_Value=200000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=200000000
@@ -383,13 +442,13 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=200000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=200000000
-RCC.SAI23Freq_Value=200000000
-RCC.SAI4AFreq_Value=200000000
-RCC.SAI4BFreq_Value=200000000
-RCC.SDMMCFreq_Value=200000000
-RCC.SPDIFRXFreq_Value=200000000
-RCC.SPI123Freq_Value=200000000
+RCC.SAI1Freq_Value=100000000
+RCC.SAI23Freq_Value=100000000
+RCC.SAI4AFreq_Value=100000000
+RCC.SAI4BFreq_Value=100000000
+RCC.SDMMCFreq_Value=100000000
+RCC.SPDIFRXFreq_Value=100000000
+RCC.SPI123Freq_Value=100000000
 RCC.SPI45Freq_Value=100000000
 RCC.SPI6Freq_Value=100000000
 RCC.SWPMI1Freq_Value=100000000
@@ -400,7 +459,7 @@ RCC.Tim2OutputFreq_Value=200000000
 RCC.TraceFreq_Value=200000000
 RCC.USART16Freq_Value=100000000
 RCC.USART234578Freq_Value=100000000
-RCC.USBFreq_Value=200000000
+RCC.USBFreq_Value=100000000
 RCC.VCO1OutputFreq_Value=800000000
 RCC.VCO2OutputFreq_Value=400000000
 RCC.VCO3OutputFreq_Value=160000000
@@ -413,11 +472,11 @@ SDMMC1.IPParameters=ClockDiv,HardwareFlowControl,TransceiverPresent
 SDMMC1.TransceiverPresent=SDMMC_TRANSCEIVER_NOT_PRESENT
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CalculateBaudRate=781.25 KBits/s
+SPI1.CalculateBaudRate=1.5625 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase,CRCCalculation,NSSPMode,MasterKeepIOState
@@ -425,6 +484,13 @@ SPI1.MasterKeepIOState=SPI_MASTER_KEEP_IO_STATE_DISABLE
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
+SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI4.CalculateBaudRate=781.25 KBits/s
+SPI4.DataSize=SPI_DATASIZE_8BIT
+SPI4.Direction=SPI_DIRECTION_2LINES
+SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI4.Mode=SPI_MODE_MASTER
+SPI4.VirtualType=VM_MASTER
 UART7.BaudRate=460800
 UART7.IPParameters=BaudRate
 VP_FATFS_VS_SDIO.Mode=SDIO
