--- a/X7Pro_Driver.ioc
+++ b/X7Pro_Driver.ioc
@@ -215,12 +215,12 @@ Mdma.RequestSetsNb=1
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true\:false
+NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI9_5_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MDMA_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -245,9 +245,10 @@ PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
-PA15\ (JTDI).GPIOParameters=GPIO_Label
+PA15\ (JTDI).GPIOParameters=PinState,GPIO_Label
 PA15\ (JTDI).GPIO_Label=ICM42688P_CS
 PA15\ (JTDI).Locked=true
+PA15\ (JTDI).PinState=GPIO_PIN_SET
 PA15\ (JTDI).Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Speed
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -295,9 +296,10 @@ PE13.Signal=SPI4_MISO
 PE2.Locked=true
 PE2.Mode=Full_Duplex_Master
 PE2.Signal=SPI4_SCK
-PE3.GPIOParameters=GPIO_Label
+PE3.GPIOParameters=PinState,GPIO_Label
 PE3.GPIO_Label=SENSORS_SW
 PE3.Locked=true
+PE3.PinState=GPIO_PIN_SET
 PE3.Signal=GPIO_Output
 PE5.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultOutputPP
 PE5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -472,11 +474,11 @@ SDMMC1.IPParameters=ClockDiv,HardwareFlowControl,TransceiverPresent
 SDMMC1.TransceiverPresent=SDMMC_TRANSCEIVER_NOT_PRESENT
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CalculateBaudRate=1.5625 MBits/s
+SPI1.CalculateBaudRate=781.25 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase,CRCCalculation,NSSPMode,MasterKeepIOState
