--- a/X7Pro_Driver.ioc
+++ b/X7Pro_Driver.ioc
@@ -217,8 +217,8 @@ MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true\:false
-NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true\:false
+NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI9_5_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
