--- a/X7Pro_Driver.ioc
+++ b/X7Pro_Driver.ioc
@@ -1,4 +1,41 @@
 #MicroXplorer Configuration settings - do not modify
+Bdma.Request0=SPI6_RX
+Bdma.Request1=SPI6_TX
+Bdma.RequestsNb=2
+Bdma.SPI6_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Bdma.SPI6_RX.0.EventEnable=DISABLE
+Bdma.SPI6_RX.0.Instance=BDMA_Channel0
+Bdma.SPI6_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Bdma.SPI6_RX.0.MemInc=DMA_MINC_ENABLE
+Bdma.SPI6_RX.0.Mode=DMA_NORMAL
+Bdma.SPI6_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Bdma.SPI6_RX.0.PeriphInc=DMA_PINC_DISABLE
+Bdma.SPI6_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Bdma.SPI6_RX.0.Priority=DMA_PRIORITY_LOW
+Bdma.SPI6_RX.0.RequestNumber=1
+Bdma.SPI6_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Bdma.SPI6_RX.0.SignalID=NONE
+Bdma.SPI6_RX.0.SyncEnable=DISABLE
+Bdma.SPI6_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Bdma.SPI6_RX.0.SyncRequestNumber=1
+Bdma.SPI6_RX.0.SyncSignalID=NONE
+Bdma.SPI6_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Bdma.SPI6_TX.1.EventEnable=DISABLE
+Bdma.SPI6_TX.1.Instance=BDMA_Channel1
+Bdma.SPI6_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Bdma.SPI6_TX.1.MemInc=DMA_MINC_ENABLE
+Bdma.SPI6_TX.1.Mode=DMA_NORMAL
+Bdma.SPI6_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Bdma.SPI6_TX.1.PeriphInc=DMA_PINC_DISABLE
+Bdma.SPI6_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Bdma.SPI6_TX.1.Priority=DMA_PRIORITY_LOW
+Bdma.SPI6_TX.1.RequestNumber=1
+Bdma.SPI6_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Bdma.SPI6_TX.1.SignalID=NONE
+Bdma.SPI6_TX.1.SyncEnable=DISABLE
+Bdma.SPI6_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Bdma.SPI6_TX.1.SyncRequestNumber=1
+Bdma.SPI6_TX.1.SyncSignalID=NONE
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_FULL_ACCESS
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_FULL_ACCESS
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_REGION_FULL_ACCESS
@@ -134,54 +171,59 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32H743XIH6
 Mcu.Family=STM32H7
-Mcu.IP0=CORTEX_M7
-Mcu.IP1=DEBUG
-Mcu.IP10=SPI4
-Mcu.IP11=SYS
-Mcu.IP12=UART7
-Mcu.IP2=DMA
-Mcu.IP3=FATFS
-Mcu.IP4=FREERTOS
-Mcu.IP5=MDMA
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
-Mcu.IP8=SDMMC1
-Mcu.IP9=SPI1
-Mcu.IPNb=13
+Mcu.IP0=BDMA
+Mcu.IP1=CORTEX_M7
+Mcu.IP10=SPI1
+Mcu.IP11=SPI4
+Mcu.IP12=SPI6
+Mcu.IP13=SYS
+Mcu.IP14=UART7
+Mcu.IP2=DEBUG
+Mcu.IP3=DMA
+Mcu.IP4=FATFS
+Mcu.IP5=FREERTOS
+Mcu.IP6=MDMA
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=SDMMC1
+Mcu.IPNb=15
 Mcu.Name=STM32H743XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PC10
 Mcu.Pin1=PA15 (JTDI)
-Mcu.Pin10=PA13 (JTMS/SWDIO)
-Mcu.Pin11=PE5
-Mcu.Pin12=PE3
-Mcu.Pin13=PD2
-Mcu.Pin14=PE6
-Mcu.Pin15=PC8
-Mcu.Pin16=PC9
-Mcu.Pin17=PG7
-Mcu.Pin18=PF2
-Mcu.Pin19=PH1-OSC_OUT (PH1)
+Mcu.Pin10=PC12
+Mcu.Pin11=PA13 (JTMS/SWDIO)
+Mcu.Pin12=PE5
+Mcu.Pin13=PE3
+Mcu.Pin14=PG13
+Mcu.Pin15=PD2
+Mcu.Pin16=PE6
+Mcu.Pin17=PC8
+Mcu.Pin18=PC9
+Mcu.Pin19=PG7
 Mcu.Pin2=PG11
-Mcu.Pin20=PH0-OSC_IN (PH0)
-Mcu.Pin21=PF6
-Mcu.Pin22=PF10
-Mcu.Pin23=PA6
-Mcu.Pin24=PB2
-Mcu.Pin25=PE8
-Mcu.Pin26=PE13
-Mcu.Pin27=PE7
-Mcu.Pin28=VP_FATFS_VS_SDIO
-Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin20=PF2
+Mcu.Pin21=PH1-OSC_OUT (PH1)
+Mcu.Pin22=PH0-OSC_IN (PH0)
+Mcu.Pin23=PF6
+Mcu.Pin24=PF10
+Mcu.Pin25=PA6
+Mcu.Pin26=PA7
+Mcu.Pin27=PB2
+Mcu.Pin28=PE8
+Mcu.Pin29=PE13
 Mcu.Pin3=PC11
-Mcu.Pin30=VP_SYS_VS_tim1
+Mcu.Pin30=PE7
+Mcu.Pin31=VP_FATFS_VS_SDIO
+Mcu.Pin32=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin33=VP_SYS_VS_tim1
 Mcu.Pin4=PA14 (JTCK/SWCLK)
 Mcu.Pin5=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin6=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin7=PE2
-Mcu.Pin8=PD7
-Mcu.Pin9=PC12
-Mcu.PinsNb=31
+Mcu.Pin8=PG12
+Mcu.Pin9=PD7
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743XIHx
@@ -214,6 +256,8 @@ Mdma.RequestSet0=MDMA_Channel0
 Mdma.RequestSetsNb=1
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
+NVIC.BDMA_Channel0_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
+NVIC.BDMA_Channel1_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
@@ -231,6 +275,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SDMMC1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SPI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SPI4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.SPI6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -255,6 +300,9 @@ PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.Locked=true
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI6_MOSI
 PB2.Locked=true
 PB2.Signal=GPIO_Input
 PC10.GPIOParameters=GPIO_PuPd
@@ -344,6 +392,12 @@ PG11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG11.Locked=true
 PG11.Mode=Full_Duplex_Master
 PG11.Signal=SPI1_SCK
+PG12.Locked=true
+PG12.Mode=Full_Duplex_Master
+PG12.Signal=SPI6_MISO
+PG13.Locked=true
+PG13.Mode=Full_Duplex_Master
+PG13.Signal=SPI6_SCK
 PG7.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=SDEN
 PG7.Locked=true
@@ -381,7 +435,7 @@ ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-true-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,4-MX_DMA_Init-DMA-true-LL-true,5-MX_UART7_Init-UART7-true-HAL-true,6-MX_MDMA_Init-MDMA-true-HAL-true,7-MX_FATFS_Init-FATFS-true-HAL-false,8-MX_SPI1_Init-SPI1-true-LL-true,9-MX_SPI4_Init-SPI4-true-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-true-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,4-MX_DMA_Init-DMA-true-LL-true,5-MX_UART7_Init-UART7-true-HAL-true,6-MX_MDMA_Init-MDMA-true-HAL-true,7-MX_FATFS_Init-FATFS-true-HAL-false,8-MX_BDMA_Init-BDMA-true-LL-true,9-MX_SPI4_Init-SPI4-true-LL-true,10-MX_SPI6_Init-SPI6-true-LL-true,11-MX_SPI1_Init-SPI1-true-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=200000000
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
@@ -429,7 +483,7 @@ RCC.HRTIMFreq_Value=200000000
 RCC.HSE_VALUE=16000000
 RCC.I2C123Freq_Value=100000000
 RCC.I2C4Freq_Value=100000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=100000000
 RCC.LPTIM2Freq_Value=100000000
 RCC.LPTIM345Freq_Value=100000000
@@ -438,6 +492,7 @@ RCC.LTDCFreq_Value=80000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=400000000
 RCC.PLL2FRACN=0
+RCC.PLL2_VCI_Range-AdvancedSettings=RCC_PLL2VCIRANGE_3
 RCC.PLL3FRACN=0
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
@@ -493,6 +548,13 @@ SPI4.Direction=SPI_DIRECTION_2LINES
 SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI4.Mode=SPI_MODE_MASTER
 SPI4.VirtualType=VM_MASTER
+SPI6.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI6.CalculateBaudRate=781.25 KBits/s
+SPI6.DataSize=SPI_DATASIZE_8BIT
+SPI6.Direction=SPI_DIRECTION_2LINES
+SPI6.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI6.Mode=SPI_MODE_MASTER
+SPI6.VirtualType=VM_MASTER
 UART7.BaudRate=460800
 UART7.IPParameters=BaudRate
 VP_FATFS_VS_SDIO.Mode=SDIO
