--- a/X7Pro_Driver.ioc
+++ b/X7Pro_Driver.ioc
@@ -74,7 +74,9 @@ Dma.Request0=SPI1_RX
 Dma.Request1=SPI1_TX
 Dma.Request2=SPI4_RX
 Dma.Request3=SPI4_TX
-Dma.RequestsNb=4
+Dma.Request4=UART7_RX
+Dma.Request5=UART7_TX
+Dma.RequestsNb=6
 Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.0.EventEnable=DISABLE
 Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -147,6 +149,42 @@ Dma.SPI4_TX.3.SyncEnable=DISABLE
 Dma.SPI4_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI4_TX.3.SyncRequestNumber=1
 Dma.SPI4_TX.3.SyncSignalID=NONE
+Dma.UART7_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART7_RX.4.EventEnable=DISABLE
+Dma.UART7_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART7_RX.4.Instance=DMA1_Stream4
+Dma.UART7_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART7_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.UART7_RX.4.Mode=DMA_NORMAL
+Dma.UART7_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART7_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.UART7_RX.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART7_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.UART7_RX.4.RequestNumber=1
+Dma.UART7_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART7_RX.4.SignalID=NONE
+Dma.UART7_RX.4.SyncEnable=DISABLE
+Dma.UART7_RX.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART7_RX.4.SyncRequestNumber=1
+Dma.UART7_RX.4.SyncSignalID=NONE
+Dma.UART7_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART7_TX.5.EventEnable=DISABLE
+Dma.UART7_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART7_TX.5.Instance=DMA1_Stream5
+Dma.UART7_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART7_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.UART7_TX.5.Mode=DMA_NORMAL
+Dma.UART7_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART7_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.UART7_TX.5.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART7_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.UART7_TX.5.RequestNumber=1
+Dma.UART7_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART7_TX.5.SignalID=NONE
+Dma.UART7_TX.5.SyncEnable=DISABLE
+Dma.UART7_TX.5.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART7_TX.5.SyncRequestNumber=1
+Dma.UART7_TX.5.SyncSignalID=NONE
 FATFS.BSP.number=1
 FATFS.IPParameters=_CODE_PAGE,_USE_LFN,_MAX_SS
 FATFS._CODE_PAGE=936
@@ -177,7 +215,8 @@ Mcu.IP10=SPI1
 Mcu.IP11=SPI4
 Mcu.IP12=SPI6
 Mcu.IP13=SYS
-Mcu.IP14=UART7
+Mcu.IP14=TIM5
+Mcu.IP15=UART7
 Mcu.IP2=DEBUG
 Mcu.IP3=DMA
 Mcu.IP4=FATFS
@@ -186,44 +225,49 @@ Mcu.IP6=MDMA
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SDMMC1
-Mcu.IPNb=15
+Mcu.IPNb=16
 Mcu.Name=STM32H743XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PC10
 Mcu.Pin1=PA15 (JTDI)
-Mcu.Pin10=PC12
-Mcu.Pin11=PA13 (JTMS/SWDIO)
-Mcu.Pin12=PE5
-Mcu.Pin13=PE3
-Mcu.Pin14=PG13
-Mcu.Pin15=PD2
-Mcu.Pin16=PE6
-Mcu.Pin17=PC8
-Mcu.Pin18=PC9
-Mcu.Pin19=PG7
-Mcu.Pin2=PG11
-Mcu.Pin20=PF2
-Mcu.Pin21=PH1-OSC_OUT (PH1)
-Mcu.Pin22=PH0-OSC_IN (PH0)
-Mcu.Pin23=PF6
-Mcu.Pin24=PF10
-Mcu.Pin25=PA6
-Mcu.Pin26=PA7
-Mcu.Pin27=PB2
-Mcu.Pin28=PE8
-Mcu.Pin29=PE13
-Mcu.Pin3=PC11
-Mcu.Pin30=PE7
-Mcu.Pin31=VP_FATFS_VS_SDIO
-Mcu.Pin32=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin33=VP_SYS_VS_tim1
-Mcu.Pin4=PA14 (JTCK/SWCLK)
-Mcu.Pin5=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin6=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin7=PE2
-Mcu.Pin8=PG12
-Mcu.Pin9=PD7
-Mcu.PinsNb=34
+Mcu.Pin10=PD7
+Mcu.Pin11=PC12
+Mcu.Pin12=PA13 (JTMS/SWDIO)
+Mcu.Pin13=PE5
+Mcu.Pin14=PE3
+Mcu.Pin15=PG13
+Mcu.Pin16=PD2
+Mcu.Pin17=PE6
+Mcu.Pin18=PC8
+Mcu.Pin19=PC9
+Mcu.Pin2=PI0
+Mcu.Pin20=PG7
+Mcu.Pin21=PF2
+Mcu.Pin22=PH1-OSC_OUT (PH1)
+Mcu.Pin23=PH0-OSC_IN (PH0)
+Mcu.Pin24=PF6
+Mcu.Pin25=PF10
+Mcu.Pin26=PH10
+Mcu.Pin27=PH11
+Mcu.Pin28=PA6
+Mcu.Pin29=PA7
+Mcu.Pin3=PG11
+Mcu.Pin30=PB2
+Mcu.Pin31=PH12
+Mcu.Pin32=PE8
+Mcu.Pin33=PE13
+Mcu.Pin34=PE7
+Mcu.Pin35=VP_FATFS_VS_SDIO
+Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin37=VP_SYS_VS_tim1
+Mcu.Pin38=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin4=PC11
+Mcu.Pin5=PA14 (JTCK/SWCLK)
+Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin7=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin8=PE2
+Mcu.Pin9=PG12
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743XIHx
@@ -263,6 +307,8 @@ NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI9_5_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
@@ -284,15 +330,16 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.UART7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.UART7_IRQn=true\:5\:0\:false\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
-PA15\ (JTDI).GPIOParameters=PinState,GPIO_Label
+PA15\ (JTDI).GPIOParameters=PinState,GPIO_Label,PinAttribute
 PA15\ (JTDI).GPIO_Label=ICM42688P_CS
 PA15\ (JTDI).Locked=true
+PA15\ (JTDI).PinAttribute=Free
 PA15\ (JTDI).PinState=GPIO_PIN_SET
 PA15\ (JTDI).Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Speed
@@ -305,9 +352,10 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI6_MOSI
 PB2.Locked=true
 PB2.Signal=GPIO_Input
-PC10.GPIOParameters=GPIO_PuPd
+PC10.GPIOParameters=GPIO_PuPd,PinAttribute
 PC10.GPIO_PuPd=GPIO_PULLUP
 PC10.Mode=SD_4_bits_Wide_bus
+PC10.PinAttribute=Free
 PC10.Signal=SDMMC1_D2
 PC11.GPIOParameters=GPIO_PuPd
 PC11.GPIO_PuPd=GPIO_PULLUP
@@ -366,24 +414,27 @@ PE8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE8.Locked=true
 PE8.Mode=Asynchronous
 PE8.Signal=UART7_TX
-PF10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PF10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP,PinAttribute
 PF10.GPIO_Label=ADI_CS
 PF10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PF10.GPIO_PuPd=GPIO_PULLUP
 PF10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF10.Locked=true
+PF10.PinAttribute=Free
 PF10.PinState=GPIO_PIN_SET
 PF10.Signal=GPIO_Output
-PF2.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PF2.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,PinAttribute
 PF2.GPIO_Label=RM3100
 PF2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PF2.Locked=true
+PF2.PinAttribute=Free
 PF2.PinState=GPIO_PIN_SET
 PF2.Signal=GPIO_Output
-PF6.GPIOParameters=GPIO_Speed
+PF6.GPIOParameters=GPIO_Speed,PinAttribute
 PF6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF6.Locked=true
 PF6.Mode=Asynchronous
+PF6.PinAttribute=Free
 PF6.Signal=UART7_RX
 PG11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PG11.GPIO_Mode=GPIO_MODE_AF_PP
@@ -402,10 +453,28 @@ PG7.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=SDEN
 PG7.Locked=true
 PG7.Signal=GPIO_Output
+PH0-OSC_IN\ (PH0).GPIOParameters=PinAttribute
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
+PH0-OSC_IN\ (PH0).PinAttribute=Free
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
+PH1-OSC_OUT\ (PH1).GPIOParameters=PinAttribute
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
+PH1-OSC_OUT\ (PH1).PinAttribute=Free
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
+PH10.GPIOParameters=PinAttribute
+PH10.Locked=true
+PH10.PinAttribute=Free
+PH10.Signal=S_TIM5_CH1
+PH11.GPIOParameters=PinAttribute
+PH11.Locked=true
+PH11.PinAttribute=Free
+PH11.Signal=S_TIM5_CH2
+PH12.Locked=true
+PH12.Signal=S_TIM5_CH3
+PI0.GPIOParameters=PinAttribute
+PI0.Locked=true
+PI0.PinAttribute=
+PI0.Signal=S_TIM5_CH4
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -430,12 +499,12 @@ ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=X7Pro_Driver.ioc
 ProjectManager.ProjectName=X7Pro_Driver
-ProjectManager.RegisterCallBack=UART
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-true-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,4-MX_DMA_Init-DMA-true-LL-true,5-MX_UART7_Init-UART7-true-HAL-true,6-MX_MDMA_Init-MDMA-true-HAL-true,7-MX_FATFS_Init-FATFS-true-HAL-false,8-MX_BDMA_Init-BDMA-true-LL-true,9-MX_SPI4_Init-SPI4-true-LL-true,10-MX_SPI6_Init-SPI6-true-LL-true,11-MX_SPI1_Init-SPI1-true-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-true-HAL-true,3-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,4-MX_DMA_Init-DMA-true-LL-true,5-MX_UART7_Init-UART7-true-HAL-true,6-MX_MDMA_Init-MDMA-true-HAL-true,7-MX_FATFS_Init-FATFS-true-HAL-false,8-MX_BDMA_Init-BDMA-true-LL-true,9-MX_SPI4_Init-SPI4-true-LL-true,10-MX_SPI6_Init-SPI6-true-LL-true,11-MX_SPI1_Init-SPI1-true-LL-true,12-MX_TIM5_Init-TIM5-true-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=200000000
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
@@ -483,12 +552,13 @@ RCC.HRTIMFreq_Value=200000000
 RCC.HSE_VALUE=16000000
 RCC.I2C123Freq_Value=100000000
 RCC.I2C4Freq_Value=100000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1OutPutEnable-ClockTree,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Enable-ClockTree,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=100000000
 RCC.LPTIM2Freq_Value=100000000
 RCC.LPTIM345Freq_Value=100000000
 RCC.LPUART1Freq_Value=100000000
 RCC.LTDCFreq_Value=80000000
+RCC.MCO1OutPutEnable-ClockTree=true
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=400000000
 RCC.PLL2FRACN=0
@@ -499,6 +569,7 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=200000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
+RCC.SAI1Enable-ClockTree=true
 RCC.SAI1Freq_Value=100000000
 RCC.SAI23Freq_Value=100000000
 RCC.SAI4AFreq_Value=100000000
@@ -529,6 +600,14 @@ SDMMC1.IPParameters=ClockDiv,HardwareFlowControl,TransceiverPresent
 SDMMC1.TransceiverPresent=SDMMC_TRANSCEIVER_NOT_PRESENT
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
+SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
+SH.S_TIM5_CH1.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,PWM Generation2 CH2
+SH.S_TIM5_CH2.ConfNb=1
+SH.S_TIM5_CH3.0=TIM5_CH3,PWM Generation3 CH3
+SH.S_TIM5_CH3.ConfNb=1
+SH.S_TIM5_CH4.0=TIM5_CH4,PWM Generation4 CH4
+SH.S_TIM5_CH4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
@@ -555,6 +634,15 @@ SPI6.Direction=SPI_DIRECTION_2LINES
 SPI6.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI6.Mode=SPI_MODE_MASTER
 SPI6.VirtualType=VM_MASTER
+TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM5.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM5.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM5.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM5.ClockDivision=TIM_CLOCKDIVISION_DIV2
+TIM5.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,AutoReloadPreload,Prescaler,ClockDivision
+TIM5.Period=9999
+TIM5.Prescaler=4999
 UART7.BaudRate=460800
 UART7.IPParameters=BaudRate
 VP_FATFS_VS_SDIO.Mode=SDIO
@@ -563,4 +651,6 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
