The transplant for ucos3 is completed.

--- a/X7Pro_Driver.ioc
+++ b/X7Pro_Driver.ioc
@@ -297,12 +297,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UART7_IRQn=true\:5\:0\:true\:false\:false\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA11.GPIOParameters=GPIO_Speed
-PA11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
-PA12.GPIOParameters=GPIO_Speed
-PA12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
@@ -565,11 +561,12 @@ TIM5.Prescaler=4999
 UART7.BaudRate=460800
 UART7.IPParameters=BaudRate
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-CDC_FS
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
-USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.IPParameters=VirtualMode,battery_charging_enable
 USB_OTG_FS.VirtualMode=Device_Only
+USB_OTG_FS.battery_charging_enable=DISABLE
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Mode=DSPOoLibraryJjLibrary
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
 VP_SYS_VS_Systick.Mode=SysTick
