--- a/X7Pro_Driver.ioc
+++ b/X7Pro_Driver.ioc
@@ -417,7 +417,7 @@ ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=X7Pro_Driver.ioc
 ProjectManager.ProjectName=X7Pro_Driver
-ProjectManager.RegisterCallBack=
+ProjectManager.RegisterCallBack=PCD
 ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
