--- a/X7Pro_Driver.ioc
+++ b/X7Pro_Driver.ioc
@@ -419,9 +419,9 @@ ProjectManager.ProjectFileName=X7Pro_Driver.ioc
 ProjectManager.ProjectName=X7Pro_Driver
 ProjectManager.RegisterCallBack=PCD
 ProjectManager.StackSize=0x2000
-ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
+ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-true-HAL-true,3-MX_DMA_Init-DMA-true-LL-true,4-MX_UART7_Init-UART7-true-LL-true,5-MX_BDMA_Init-BDMA-true-LL-true,6-MX_SPI4_Init-SPI4-true-LL-true,7-MX_SPI6_Init-SPI6-true-LL-true,8-MX_SPI1_Init-SPI1-true-LL-true,9-MX_TIM5_Init-TIM5-true-LL-true,10-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-true-HAL-false,12-MX_FDCAN1_Init-FDCAN1-true-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=200000000
 RCC.AHB12Freq_Value=200000000
